--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@playwright/test": "^1.57.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
